--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,9 @@ h3 {
     height: 70px;
     border-top: 1px solid #FAFAFA;
 }
+.contact:first-of-type {
+    background-color: #E9EBEB;
+}
 
 
 /* right section */
